Add on-success log level, synchronization-monitor improvements, README restructure
- Add annotation.on-success and includes.on-success options (info|debug, default info)
  to control log level for successful conversions; replaces hardcoded debug log
- Add synchronization-monitor.log-level option (info|debug, default info) controlling
  the per-monitorenter log in SynchronizationMonitor.check()
- synchronization-monitor.append-to is now optional; mode works as log-only without a file
- SynchronizationMonitor.configure() always activates monitoring regardless of path;
  check() gates on active flag instead of writer null-check
- BackgroundFileWriter.record() reverted to void (boolean return removed)
- Restructure README Options into categorized subsections; add Synchronization monitor section